# agent-shell

./: .env  .env.bkp  .env.example  .env.old  Makefile  README.md  agent-cli.py  complete_fix.sh  deployment.sh  docker-compose.python.yml  docker-compose.python.yml.old  docker-compose.simple.yml  docker-compose.yml  fix.sh  fix2.sh  fix_build_issues.sh  fix_go_dependencies.sh  fix_vm_manager.sh  fixed_main.py  fixed_routes.py  fixed_task_routes.py  improved_main.py  improved_task_routes.py  improved_ui_handler.py  libvirt_manager.py  libvirt_requirements.txt  libvirt_routes.py  libvirt_vm_manager.py  log  setup-libvirt.sh  setup.sh  simplified_routes.py  test-components.sh  updated_routes.py  vm_tests.sh
agent-system/: Dockerfile  config.py  fixed-main.py  main.py  main.py.old  models.py  requirements.txt  robust_vm_manager.py  routes.py  vm-manager.py
agent-system/agents/: command_executor.py  command_generator.py  command_generator.py.bak  enhanced_command_generator.py  enhanced_command_generator.py.old  execution_engine.py  planning_agent.py
agent-system/api/: __init__.py  chat_routes.py  init.py  routes.py  ui_handler.py  ui_handler.py.old
agent-system/handlers/: __init__.py  chat_handler.py  command_handler.py  (+2 more)
agent_system/: Dockerfile  main.py
api-gateway/: Dockerfile  go.mod  go.sum
api_gateway/: go.mod
command-executor/: Cargo.toml  Dockerfile
command-executor/agent_system/: requirements.txt
command-executor/api_gateway/: Dockerfile  go.mod
command-executor/command_executor/: Cargo.toml
command-executor/knowledge_system/: Dockerfile  main.py
command-executor/orchestrator/: Dockerfile  go.mod
command-executor/src/: main.rs  main.rs.old
command-executor/vm_manager/: go.mod
command_executor/: Cargo.toml  Dockerfile
frontend/: index.html
knowledge-system/: Dockerfile  requirements.txt
knowledge_system/: requirements.txt
orchestrator/: Dockerfile  go.mod
vm-manager/: Dockerfile  go.mod  go.sum
vm_manager/: Cargo.toml  Dockerfile  go.mod
vm_manager/cmd/vm_manager/: main.go
(+22 files in other folders)
