[package]
name = "command-executor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
axum = "0.6.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.100"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tower-http = { version = "0.4.0", features = ["trace", "cors"] }
anyhow = "1.0.70"
thiserror = "1.0.40"
dotenv = "0.15.0"
regex = "1.8.0"
reqwest = { version = "0.11.18", features = ["json"] }
chrono = { version = "0.4.24", features = ["serde"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }
