[package]
name = "command_executor"
version = "0.1.0"
edition = "2021"

[dependencies]
# Using a compatible version of native-tls for Rust 1.75.0
native-tls = "0.2.11"
reqwest = { version = "0.11", features = ["json", "blocking"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4.3.1"
actix-rt = "2.8.0"
env_logger = "0.10.0"
log = "0.4.17"
uuid = { version = "1.3.3", features = ["v4", "serde"] }
futures = "0.3.28"
async-trait = "0.1.68"

[dev-dependencies]
mockito = "1.0.2"
